--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -53,20 +53,17 @@
     
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <a href="{{'/notes' | relative_url}}" class="navbar-item">
-          Demo Feed
+        <a href="{{'/notas' | relative_url}}" class="navbar-item">
+          Notas
         </a>
-        <a href="../post/how-to" class="navbar-item">
-          How To
+        <a href="{{'/listas' | relative_url}}" class="navbar-item">
+          Listas
         </a>
-        <a href="https://github.com/Jekyll-Garden/jekyll-garden.github.io" target="_blank" class="navbar-item">
-          Github
+        <a href="{{'/cursos' | relative_url}}" class="navbar-item">
+          Blog
         </a>
-        <a href="https://jekyllrb.com/" target="_blank" class="navbar-item">
-          Jekyll
-        </a>
-        <a href="https://obsidian.md/"  target="_blank" class="navbar-item">
-          Obsidian
+        <a href="{{'/blog' | relative_url}}" class="navbar-item">
+          Blog
         </a>
       </div>
       <div class="navbar-end is-hidden-mobile" onclick="modeSwitcher()" >
